Ajustes generales, cambios en la zona superior y pagina de inicio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,12 @@
   }
 }
 
+/* line 1, assets/scss/components/_slides.scss */
+.cd_carousel {
+  margin: 0;
+  padding: 0;
+}
+
 /*/--------------------Global styles-------------------*/
 /* line 4, assets/scss/base/_base.scss */
 article,
@@ -267,7 +273,7 @@ a {
 
 /* line 25, assets/scss/layout/_nav.scss */
 .navbar .nav-menu-primary-container .navbar-nav a {
-  font-size: 16px;
+  font-size: 14px;
 }
 
 /* line 27, assets/scss/layout/_nav.scss */
@@ -317,6 +323,99 @@ a {
 /* line 70, assets/scss/layout/_nav.scss */
 .nav-principal-cam .contacto-visible {
   display: block;
+}
+
+/*
+HOVERNAV
+========
+A simple addition to the dropdown menu (Bootstrap itself is unchanged). Navbar dropdowns appear on hover.
+This works only for screen sizes larger than phones.
+
+If you don't want this, delete this segment of the CSS and delete the corresponding segment of js/bst-plus.js
+*/
+@media (min-width: 768px) {
+  /* line 84, assets/scss/layout/_nav.scss */
+  .navbar-nav .open ul {
+    display: none;
+  }
+  /* line 87, assets/scss/layout/_nav.scss */
+  .navbar-default .navbar-nav > .open > a,
+  .navbar-default .navbar-nav > .open > a:hover,
+  .navbar-default .navbar-nav > .open > a:focus {
+    color: #555;
+    background: none;
+  }
+  /* line 93, assets/scss/layout/_nav.scss */
+  .navbar-inverse .navbar-nav > .open > a,
+  .navbar-inverse .navbar-nav > .open > a:hover,
+  .navbar-inverse .navbar-nav > .open > a:focus {
+    color: #969696;
+    background: none;
+  }
+  /* line 99, assets/scss/layout/_nav.scss */
+  .navbar-nav .hovernav:hover > .dropdown-menu {
+    display: block;
+  }
+}
+
+/*
+MEGANAV
+=======
+A simple addition to the dropdown menu (Bootstrap itself is unchanged). When you add GRAND-CHILD links in the navbar: on screens larger than phones, Meganav will transform the dropdown into a mega-menu, with child-links displayed as menu-column heads (in bold).
+
+If you don't want this, delete this segment of the CSS and delete the corresponding segment of js/bst-plus.js
+*/
+/* line 111, assets/scss/layout/_nav.scss */
+.mega-menu ul a {
+  color: #666;
+}
+
+/* line 114, assets/scss/layout/_nav.scss */
+.mega-menu > ul > li > a {
+  font-weight: bold !important;
+}
+
+@media (max-width: 767px) {
+  /* line 118, assets/scss/layout/_nav.scss */
+  .has-children ul {
+    display: block !important;
+    margin-left: 15px;
+  }
+}
+
+@media (min-width: 768px) {
+  /* line 124, assets/scss/layout/_nav.scss */
+  .dropdown.mega-menu {
+    position: static;
+  }
+  /* line 127, assets/scss/layout/_nav.scss */
+  .mega-menu > .dropdown-menu {
+    left: 0;
+    right: 0;
+    overflow-x: auto;
+  }
+  /* line 132, assets/scss/layout/_nav.scss */
+  .mega-menu > ul > li {
+    display: table-cell;
+  }
+  /* line 135, assets/scss/layout/_nav.scss */
+  .mega-menu > ul ul {
+    position: relative;
+    display: block !important;
+    border: 0;
+    border-radius: 0;
+    box-shadow: none;
+    padding: 0;
+  }
+  /* line 143, assets/scss/layout/_nav.scss */
+  .dropdown-menu li {
+    border-right: 1px solid #e7e7e7;
+  }
+  /* line 146, assets/scss/layout/_nav.scss */
+  .dropdown-menu li li,
+  .dropdown-menu li:last-of-type {
+    border-right: 0;
+  }
 }
 
 /* line 2, assets/scss/layout/_contact.scss */
