--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,4 +9,4 @@
 @import 'layout/_nav';
 @import 'layout/_contact';
 @import 'layout/_footer';
-@import 'layout/woocommerce/_cart'; //Carrito, finalizar compra y cuenta son paginas con shortcodes no estan dentro de woocommerce
+@import 'layout/_woocommerce';
