--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -35,24 +35,28 @@
   clear: both;
 }
 
-/* line 3, assets/scss/layout/woocommerce/_global.scss */
+/* line 6, assets/scss/layout/woocommerce/_global.scss */
 .related.products {
   clear: both;
   text-align: center;
 }
 
-/* line 9, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam {
+/* line 13, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce {
   padding: 0 80px 0 80px;
 }
 
-/* line 10, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam .woocommerce-message, .woocommerce-content-cam .woocommerce-error, .woocommerce-content-cam .woocommerce-info {
+/* line 14, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce .woocommerce-message,
+.woocommerce .woocommerce-error,
+.woocommerce .woocommerce-info {
   color: #666666;
 }
 
-/* line 12, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam .woocommerce-message a, .woocommerce-content-cam .woocommerce-error a, .woocommerce-content-cam .woocommerce-info a {
+/* line 18, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce .woocommerce-message a,
+.woocommerce .woocommerce-error a,
+.woocommerce .woocommerce-info a {
   background: #008d94;
   transition: ease-in-out 0.3s all;
   border-radius: 0;
@@ -60,87 +64,89 @@
   font-weight: 400;
 }
 
-/* line 18, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam .woocommerce-message a:hover, .woocommerce-content-cam .woocommerce-error a:hover, .woocommerce-content-cam .woocommerce-info a:hover {
+/* line 24, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce .woocommerce-message a:hover,
+.woocommerce .woocommerce-error a:hover,
+.woocommerce .woocommerce-info a:hover {
   background: #e22980;
   color: white;
 }
 
 @media handheld, only screen and (max-width: 768px) {
-  /* line 9, assets/scss/layout/woocommerce/_global.scss */
-  .woocommerce-content-cam {
+  /* line 13, assets/scss/layout/woocommerce/_global.scss */
+  .woocommerce {
     padding: 0 10px 0 10px;
   }
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1280px) {
-  /* line 9, assets/scss/layout/woocommerce/_global.scss */
-  .woocommerce-content-cam {
+  /* line 13, assets/scss/layout/woocommerce/_global.scss */
+  .woocommerce {
     padding: 0 20px 0 20px;
   }
 }
 
-/* line 31, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam label {
+/* line 37, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce label {
   color: #2f3238;
 }
 
-/* line 34, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam .woocommerce-breadcrumb {
+/* line 40, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce .woocommerce-breadcrumb {
   margin: 0;
   font-size: 1.1em;
 }
 
-/* line 38, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam .woocommerce-breadcrumb a:hover {
+/* line 44, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce .woocommerce-breadcrumb a:hover {
   color: #e22980;
 }
 
 @media handheld, only screen and (max-width: 768px) {
-  /* line 34, assets/scss/layout/woocommerce/_global.scss */
-  .woocommerce-content-cam .woocommerce-breadcrumb {
+  /* line 40, assets/scss/layout/woocommerce/_global.scss */
+  .woocommerce .woocommerce-breadcrumb {
     text-align: center;
   }
 }
 
-/* line 47, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam .woocommerce-result-count {
+/* line 53, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce .woocommerce-result-count {
   color: #a7a7a7;
   font-size: 0.92em;
 }
 
-/* line 52, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam .wapl-flash {
+/* line 58, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce .wapl-flash {
   top: -35px;
 }
 
 @media only screen and (min-width: 1281px) {
-  /* line 52, assets/scss/layout/woocommerce/_global.scss */
-  .woocommerce-content-cam .wapl-flash {
+  /* line 58, assets/scss/layout/woocommerce/_global.scss */
+  .woocommerce .wapl-flash {
     top: -15px;
   }
 }
 
-/* line 57, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam .wapl-flash .woocommerce-advanced-product-label.product-label {
+/* line 63, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce .wapl-flash .woocommerce-advanced-product-label.product-label {
   border-color: #e3e3e3;
   width: 55px;
   height: 55px;
 }
 
-/* line 64, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam .page-title,
-.woocommerce-content-cam .woocommerce-ordering {
+/* line 70, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce .page-title,
+.woocommerce .woocommerce-ordering {
   display: none;
 }
 
-/* line 70, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam ul.products {
+/* line 75, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce ul.products {
   padding: 40px 0 0 0;
 }
 
-/* line 73, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam ul.products li.product {
+/* line 78, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce ul.products li.product {
   margin-bottom: 20px;
   width: 13%;
   display: inline-block;
@@ -150,50 +156,52 @@
 }
 
 @media handheld, only screen and (max-width: 768px) {
-  /* line 73, assets/scss/layout/woocommerce/_global.scss */
-  .woocommerce-content-cam ul.products li.product {
+  /* line 78, assets/scss/layout/woocommerce/_global.scss */
+  .woocommerce ul.products li.product {
     width: 45%;
   }
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1280px) {
-  /* line 73, assets/scss/layout/woocommerce/_global.scss */
-  .woocommerce-content-cam ul.products li.product {
+  /* line 78, assets/scss/layout/woocommerce/_global.scss */
+  .woocommerce ul.products li.product {
     margin-bottom: 5px;
   }
 }
 
 @media only screen and (min-width: 1281px) {
-  /* line 73, assets/scss/layout/woocommerce/_global.scss */
-  .woocommerce-content-cam ul.products li.product {
+  /* line 78, assets/scss/layout/woocommerce/_global.scss */
+  .woocommerce ul.products li.product {
     margin-bottom: 0;
   }
 }
 
-/* line 89, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam ul.products li.product a.button {
+/* line 94, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce ul.products li.product a.button {
   display: none;
 }
 
-/* line 94, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link:hover h3, .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link:hover h2 {
+/* line 100, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce ul.products li.product a.woocommerce-LoopProduct-link:hover h3,
+.woocommerce ul.products li.product a.woocommerce-LoopProduct-link:hover h2 {
   opacity: 1;
   color: #666666;
 }
 
-/* line 103, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link span.price {
+/* line 109, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce ul.products li.product a.woocommerce-LoopProduct-link span.price {
   display: none;
   text-align: center;
 }
 
-/* line 114, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link span.price span.woocommerce-Price-amount span.woocommerce-Price-currencySymbol {
+/* line 118, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce ul.products li.product a.woocommerce-LoopProduct-link span.price span.woocommerce-Price-amount span.woocommerce-Price-currencySymbol {
   margin-right: 8px;
 }
 
-/* line 120, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3, .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h2 {
+/* line 124, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce ul.products li.product a.woocommerce-LoopProduct-link h3,
+.woocommerce ul.products li.product a.woocommerce-LoopProduct-link h2 {
   position: relative;
   top: -15px;
   text-align: center;
@@ -206,66 +214,72 @@
 }
 
 @media handheld {
-  /* line 120, assets/scss/layout/woocommerce/_global.scss */
-  .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3, .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h2 {
+  /* line 124, assets/scss/layout/woocommerce/_global.scss */
+  .woocommerce ul.products li.product a.woocommerce-LoopProduct-link h3,
+  .woocommerce ul.products li.product a.woocommerce-LoopProduct-link h2 {
     opacity: 1;
   }
 }
 
-/* line 130, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3 .touch, .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h2 .touch {
+/* line 137, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce ul.products li.product a.woocommerce-LoopProduct-link h3 .touch,
+.woocommerce ul.products li.product a.woocommerce-LoopProduct-link h2 .touch {
   opacity: 1;
 }
 
 @media handheld, only screen and (max-width: 768px) {
-  /* line 120, assets/scss/layout/woocommerce/_global.scss */
-  .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3, .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h2 {
+  /* line 124, assets/scss/layout/woocommerce/_global.scss */
+  .woocommerce ul.products li.product a.woocommerce-LoopProduct-link h3,
+  .woocommerce ul.products li.product a.woocommerce-LoopProduct-link h2 {
     font-size: 1.2em;
     opacity: 1;
   }
 }
 
 @media only screen and (min-width: 1281px) {
-  /* line 120, assets/scss/layout/woocommerce/_global.scss */
-  .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3, .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h2 {
+  /* line 124, assets/scss/layout/woocommerce/_global.scss */
+  .woocommerce ul.products li.product a.woocommerce-LoopProduct-link h3,
+  .woocommerce ul.products li.product a.woocommerce-LoopProduct-link h2 {
     font-size: 1.4em;
     top: -25px;
   }
 }
 
-/* line 142, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog {
+/* line 151, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog {
   padding: 20px;
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1280px) {
-  /* line 142, assets/scss/layout/woocommerce/_global.scss */
-  .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog {
+  /* line 151, assets/scss/layout/woocommerce/_global.scss */
+  .woocommerce ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog {
     padding: 10px;
   }
 }
 
 @media only screen and (min-width: 1281px) {
-  /* line 142, assets/scss/layout/woocommerce/_global.scss */
-  .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog {
+  /* line 151, assets/scss/layout/woocommerce/_global.scss */
+  .woocommerce ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog {
     padding: 30px;
   }
 }
 
-/* line 155, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce-content-cam nav.woocommerce-pagination {
+/* line 164, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce nav.woocommerce-pagination {
   margin: 40px 0 30px 0;
 }
 
 @media handheld, only screen and (max-width: 768px) {
-  /* line 159, assets/scss/layout/woocommerce/_global.scss */
-  .woocommerce-content-cam nav.woocommerce-pagination ul.page-numbers li span, .woocommerce-content-cam nav.woocommerce-pagination ul.page-numbers li a {
+  /* line 168, assets/scss/layout/woocommerce/_global.scss */
+  .woocommerce nav.woocommerce-pagination ul.page-numbers li span,
+  .woocommerce nav.woocommerce-pagination ul.page-numbers li a {
     font-size: 20px;
   }
 }
 
-/* line 169, assets/scss/layout/woocommerce/_global.scss */
-.woocommerce button.button, a.button {
+/* line 180, assets/scss/layout/woocommerce/_global.scss */
+.woocommerce button.button,
+a.button {
   font-weight: 400 !important;
 }
 
