--- a/assets/scss/layout/woocommerce/_woo-single-product.scss
+++ b/assets/scss/layout/woocommerce/_woo-single-product.scss
@@ -34,7 +34,7 @@
                         padding: 5px;
                     }
                     &:hover img {
-                        @include transform(scale(1.2) rotate(-180deg));
+                        transform: scale(1.2) rotate(-180deg);
                     }
                 }
             }
@@ -49,9 +49,8 @@
             .wrap-sumario {
                 margin: 40px 0 0 0;
                 h1.product_title {
-                    font-family: $title-light;
                     font-size: 26px;
-                    font-weight: 400;
+                    font-weight: $font-light;
                 }
                 .price {
                     span {
